Don't try to send screen orientation change events to provisional frames

DevTools audits trigger a ViewMsg_EnableDeviceEmulation on a pending
RenderFrameHost (see EmulationHandler::UpdateDeviceEmulationState, via
RenderFrameDevToolsAgentHost::AboutToNavigateRenderFrame), which is
processed by the frame's widget (WebViewFrameWidget) before the frame
commits.  In that state, RenderWidget::OnOrientationChange crashed,
because even though IsWebFrameWidget() was true for this widget,
WebViewFrameWidget::LocalRoot() returned null, since the frame
wasn't swapped into the tree yet.  The LocalRoot() was then used
to send screen orientation change events.

It doesn't make sense to fire events on a frame that hasn't committed
and isn't in the frame tree yet, so work around this by null-checking
LocalRoot().

Bug: 764202, 764206
Change-Id: I26c1c9ce938abb7b18757b88356559a30aa08fec
Reviewed-on: https://chromium-review.googlesource.com/662904
Commit-Queue: Alex Moshchuk <alexmos@chromium.org>
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Cr-Commit-Position: refs/heads/master@{#501517}
Former-commit-id: 0b409c439665e83096af5cbc6ae6edc0bb67467b